--- a/.github/workflows/github-action-build.yml
+++ b/.github/workflows/github-action-build.yml
@@ -22,9 +22,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Docker Compose Test
-        run: docker-compose unit
+        run: docker-compose up unit
 
       # Runs a set of commands using the runners shell
       - name: Docker Compose Coverage
-        run: docker-compose coverage
+        run: docker-compose up coverage
 
